tests/invalid_nodepend/typeclass_test_2.err_exp
typeclass_test_2.m:015: In clause for predicate `main'/2:
typeclass_test_2.m:015:   error: the typeclass constraint
typeclass_test_2.m:015:     [38;5;87m`typeclass_test_2.numbered_type(int)'[39;49m
typeclass_test_2.m:015:   is [38;5;203munsatisfiable.[39;49m
typeclass_test_2.m:023: Error: expected
typeclass_test_2.m:023:     [38;5;40m`pred(<Name> / <Arity>) is <InstanceName>'[39;49m
typeclass_test_2.m:023:   or
typeclass_test_2.m:023:     [38;5;40m`func(<Name> / <Arity>) is <InstanceName>',[39;49m
typeclass_test_2.m:023:   got
typeclass_test_2.m:023:     [38;5;203m((type_num / 0) is foo_type_num).[39;49m
typeclass_test_2.m:026: Error: clause for function [38;5;87m`foo_type_num'/1[39;49m [38;5;203mwithout[39;49m a
typeclass_test_2.m:026:   corresponding `:- func' declaration.
typeclass_test_2.m:026: Inferred :- func foo_type_num(T1) = int.
